[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
requires = [
	"setuptools",
	"six"
]
build-backend = "setuptools.build_meta"

[project]
name = "Nxpy"
dynamic = ["version"]
description = "Nick's Python Toolbox"
readme = "README.rst"
license.file = "LICENSE.txt"
authors = [
    { name = "Nicola Musatti", email = "nicola.musatti@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "six",
]

[project.urls]
Documentation = "https://nxpy.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/nmusatti/nxpy"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
nxpy_abstract               = "libs/abstract"
nxpy_backup_file            = "libs/backup_file"
nxpy_command                = "libs/command"
nxpy_core                   = "libs/core"
nxpy_file                   = "libs/file"
nxpy_file_object            = "libs/file_object"
nxpy_maven                  = "libs/maven"
nxpy_memo                   = "libs/memo"
nxpy_nonblocking_subprocess = "libs/nonblocking_subprocess"
nxpy_past                   = "libs/past"
nxpy_path                   = "libs/path"
nxpy_ply                    = "libs/ply"
nxpy_sequence               = "libs/sequence"
nxpy_sort                   = "libs/sort"
nxpy_svn                    = "libs/svn"
nxpy_temp_file              = "libs/temp_file"
nxpy_test                   = "libs/test"
nxpy_xml                    = "libs/xml"
